# rapid-cli

./: .gitignore  .pre-commit-config.yaml  config.ini  pyproject.toml  requirements.txt
src/: cli.py
src/commands/: api_main.py  google_reviews.py  instagram.py
src/core/: config.py
src/services/api/: app.py
src/services/api/routes/: status.py
src/services/rapid_api/: google_service.py  instagram.py
src/utils/: args_formatter.py  logger.py
