[project]
name = "rapid-api-tools"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Faisal Halim", email = "ffaisalhalim@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 88
exclude = ["venv/", ".venv/", "__pypackage__/"]
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''/(
  \.venv
| venv
| __pypackage__
| \.git
| \.hg
| \.mypy_cache
| \.tox
| \.pytest_cache
| \.eggs
| \.idea
| dist/
| build/
)/'''
verbose = true
